--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,37 +6,33 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
       - image: circleci/openjdk:8-jdk
       
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
+    working_directory: ~/scala-with-cats
 
     environment:
-      # Customize the JVM maximum heap limit
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
-    
+      SBT_VERSION: 1.0.4
+
     steps:
       - checkout
 
-      # Download and cache dependencies
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "build.sbt" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+          key: sbt-cache
 
-      - run: cat /dev/null | sbt test:compile
+      - run:
+          name: Compile
+          command: sbt clean test:compile
 
       - save_cache:
+          key: sbt-cache
           paths:
-            - ~/.m2
-          key: v1-dependencies--{{ checksum "build.sbt" }}
-        
-      # run tests!
-      - run: cat /dev/null | sbt test:test
+          - "~/.ivy2/cache"
+          - "~/.sbt"
+          - "~/.m2"
+
+      - run:
+          name: Unit testing
+          command: sbt test:test
+
+      - setup_remote_docker
+
